class Cerebro
{
private:
    /* data */
public:
    Cerebro(/* args */) {}
    ~Cerebro() {}
};