class Desafio
{
private:
    /* data */
public:
    Desafio(/* args */) {}
    ~Desafio() {}
};