class Habitacion
{
private:
    /* data */
public:
    Habitacion(/* args */) {}
    ~Habitacion() {}
};