class Jardin
{
private:
    /* data */
public:
    Jardin(/* args */) {}
    ~Jardin() {}
};