class JefeFinal
{
private:
    /* data */
public:
    JefeFinal(/* args */) {}
    ~JefeFinal() {}
};