class Juego
{
private:
    /* data */
public:
    Juego(/* args */) {}
    ~Juego() {}
};