class Logro
{
private:
    /* data */
public:
    Logro(/* args */) {}
    ~Logro() {}
};