class Minijuego
{
private:
    /* data */
public:
    Minijuego(/* args */) {}
    ~Minijuego() {}
};