class Musica
{
private:
    /* data */
public:
    Musica(/* args */) {}
    ~Musica() {}
};