class Nivel
{
private:
    /* data */
public:
    Nivel(/* args */) {}
    ~Nivel() {}
};