class Piscina
{
private:
    /* data */
public:
    Piscina(/* args */) {}
    ~Piscina() {}
};