class Puzzle
{
private:
    /* data */
public:
    Puzzle(/* args */) {}
    ~Puzzle() {}
};