class Sol
{
private:
    /* data */
public:
    Sol(/* args */) {}
    ~Sol() {}
};