class Survival
{
private:
    /* data */
public:
    Survival(/* args */) {}
    ~Survival() {}
};