class Tejado
{
private:
    /* data */
public:
    Tejado(/* args */) {}
    ~Tejado() {}
};