class Tienda
{
private:
    /* data */
public:
    Tienda(/* args */) {}
    ~Tienda() {}
};